fix lesson 1 && complete lesson 2

--- a/src/includes/main-header.less
+++ b/src/includes/main-header.less
@@ -5,7 +5,7 @@ header.main-header {
   padding: 1px;
   background-image: url('/images/banner.jpg');
 
-  img {
+  img.main-header__avatar {
     .centered-image();
 
     width: 140px;
@@ -14,7 +14,7 @@ header.main-header {
 
     border-radius: 999px;
     box-shadow: 0 0px 2px 1px rgba(0,0,0,0.2);
-    border: 2px solid white;
+    border: 3px solid white;
   }
 
   h1 {
@@ -24,7 +24,6 @@ header.main-header {
 
     font-weight: 300;
     font-size: 50px;
-    font-family: 'Open Sans', 'helvetica', 'arial', 'sans-serif';
     text-shadow: 0 1px rgba(0,0,0,0.3);
   }
 }
