--- a/src/includes/whatido.jade
+++ b/src/includes/whatido.jade
@@ -1,14 +1,18 @@
 section.info-section.whatido
   header
     h2 What I Do
-    p.info-section__description I"m Teng. I design and develop things on the web. Oh, and I like curry.
-  ul.whatido__skill-list
-    li.whatido__skill.whatido__skill--code
+    p.info-section__description
+      | I"m Teng. I design and develop things on the web.
+      | Oh, and I like curry.
+  ul.whatido__skill-list.nostyle.float-layout.clearfix
+    li.whatido__skill.whatido__skill--code.child.child--33
       h3 Code
-      p I like building things on the web. I"ve built games, tools, and web apps.
-    li.whatido__skill.whatido__skill--design
+      p
+        | I like building things on the web.
+        | I"ve built games, tools, and web apps.
+    li.whatido__skill.whatido__skill--design.child.child--33
       h3 Design / UX
       p I like creating happiness by making things look good and work well.
-    li.whatido__skill.whatido__skill--product
+    li.whatido__skill.whatido__skill--product.child.child--33
       h3 Product
       p I like taking products from idea to reality to users and beyond!
