--- a/src/includes/get-in-touch.jade
+++ b/src/includes/get-in-touch.jade
@@ -1,17 +1,17 @@
 section.info-section.get-in-touch
   header
     h2 Get in Touch
-  ul.get-in-touch__list
-    li
+  ul.get-in-touch__list.nostyle.float-layout
+    li.child.child--25
       a(href="#")
         img(src="images/fb-icon.png", alt="")
       p Facebook
-    li
+    li.child.child--25
       img(src="images/twitter-icon.png", alt="")
       p Twitter
-    li
+    li.child.child--25
       img(src="images/linkedin-icon.png", alt="")
       p LinkedIn
-    li
+    li.child.child--25
       img(src="images/email-icon.png", alt="")
       p Email
