--- a/src/includes/photos.jade
+++ b/src/includes/photos.jade
@@ -2,20 +2,20 @@ section.info-section.photos
   header
     h2 Photos
     p.info-section__description Some pics from my travels!
-  ul.photos__list
-    li
+  ul.photos__list.nostyle.float-layout
+    li.child.child--25
       img(src="images/p01.jpg", alt="")
-    li
+    li.child.child--25
       img(src="images/p02.jpg", alt="")
-    li
+    li.child.child--25
       img(src="images/p03.jpg", alt="")
-    li
+    li.child.child--25
       img(src="images/p04.jpg", alt="")
-    li
+    li.child.child--25
       img(src="images/p05.jpg", alt="")
-    li
+    li.child.child--25
       img(src="images/p06.jpg", alt="")
-    li
+    li.child.child--25
       img(src="images/p07.jpg", alt="")
-    li
+    li.child.child--25
       img(src="images/p08.jpg", alt="")
