--- a/src/includes/contact.less
+++ b/src/includes/contact.less
@@ -33,7 +33,7 @@ section.info-section.contact {
       border: none;
       border-radius: 9999px;
 
-      background: #ffd524;
+      background: darken(#ffd524, 10%);
 
       cursor: pointer;
       text-shadow: 0 1px 1px rgba(0,0,0,0.2);
